--- a/web/password-reset.html
+++ b/web/password-reset.html
@@ -11,30 +11,94 @@
 </head>
 <body>
   <div class="card">
-    <h2>Redirecting to the app...</h2>
-    <p>If you are not redirected automatically, open the app or paste the link into your app's reset screen.</p>
+    <h2 id="title">Redirecting to the app...</h2>
+    <p id="msg">If you are not redirected automatically, open the app or paste the link into your app's reset screen.</p>
+
+    <div id="debug" style="margin-top:18px;">
+      <label style="display:block;font-weight:600;margin-bottom:6px">Web URL (copy & paste into app if needed)</label>
+      <div style="display:flex;gap:8px;margin-bottom:8px">
+        <input id="webUrl" style="flex:1;padding:8px;border:1px solid #ddd;border-radius:6px" readonly />
+        <button id="copyWeb" style="padding:8px 12px;border-radius:6px;background:#ff4b4b;color:#fff;border:none">Copy</button>
+      </div>
+
+      <label style="display:block;font-weight:600;margin-bottom:6px">App URL (tap to open app manually)</label>
+      <div style="display:flex;gap:8px;align-items:center">
+        <input id="appUrl" style="flex:1;padding:8px;border:1px solid #ddd;border-radius:6px" readonly />
+        <button id="openApp" style="padding:8px 12px;border-radius:6px;background:#0a84ff;color:#fff;border:none">Open app</button>
+        <button id="copyApp" style="padding:8px 12px;border-radius:6px;background:#34c759;color:#fff;border:none">Copy</button>
+      </div>
+    </div>
   </div>
+
   <script>
-    // Extract fragment (after #) and turn it into a query param for app scheme
     (function(){
-      var frag = window.location.hash ? window.location.hash.substring(1) : '';
-      if (!frag) {
-        document.querySelector('h2').textContent = 'No token found in the URL.';
-        return;
+      var fullHref = window.location.href;
+      var params = new URLSearchParams(window.location.search);
+      var code = params.get('code') || params.get('access_token');
+      var title = document.getElementById('title');
+      var msg = document.getElementById('msg');
+      var webInput = document.getElementById('webUrl');
+      var appInput = document.getElementById('appUrl');
+      var copyWeb = document.getElementById('copyWeb');
+      var copyApp = document.getElementById('copyApp');
+      var openApp = document.getElementById('openApp');
+
+      webInput.value = fullHref;
+
+      function setAppUrl(c){
+        if (!c) return '';
+        return 'apexbody://reset?code=' + encodeURIComponent(c);
       }
-      try {
-        var params = new URLSearchParams(frag);
-        var token = params.get('access_token');
-        if (!token) {
-          document.querySelector('h2').textContent = 'No access token found in the URL fragment.';
-          return;
-        }
-        var appUrl = 'apexbody://reset?access_token=' + encodeURIComponent(token);
-        // Use replace so back button doesn't return here
-        window.location.replace(appUrl);
-      } catch (e) {
-        document.querySelector('h2').textContent = 'Error processing token.';
-        console.error(e);
+
+      appInput.value = setAppUrl(code) || '';
+
+      copyWeb.addEventListener('click', function(){
+        navigator.clipboard.writeText(webInput.value).then(function(){
+          copyWeb.textContent = 'Copied';
+          setTimeout(()=> copyWeb.textContent = 'Copy', 1500);
+        });
+      });
+      copyApp.addEventListener('click', function(){
+        navigator.clipboard.writeText(appInput.value || webInput.value).then(function(){
+          copyApp.textContent = 'Copied';
+          setTimeout(()=> copyApp.textContent = 'Copy', 1500);
+        });
+      });
+      openApp.addEventListener('click', function(){
+        var url = appInput.value || ('apexbody://reset?code=' + encodeURIComponent(''));
+        // try to open app
+        window.location.replace(url);
+      });
+
+      // If there's a code, try to exchange it for an access_token and open the app.
+      if (code) {
+        title.textContent = 'Exchanging code for token and opening app...';
+        msg.textContent = 'If nothing happens, use the buttons below to copy the URL and paste it into the app.';
+        // Call the serverless exchange function (Netlify) which performs the
+        // code->access_token exchange using a service role key stored securely.
+        fetch('/.netlify/functions/exchange', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ recovery_token: code })
+        }).then(function(resp){
+          return resp.json().then(function(body){
+            if (resp.ok && body.access_token) {
+              var appUrl = 'apexbody://reset?access_token=' + encodeURIComponent(body.access_token);
+              window.location.replace(appUrl);
+              return;
+            }
+            title.textContent = 'Unable to exchange code for token.';
+            msg.textContent = 'Copy the web URL or app URL below and paste into the app. Error: ' + JSON.stringify(body);
+            console.error('Token exchange failed', resp.status, body);
+          });
+        }).catch(function(err){
+          title.textContent = 'Network error during token exchange.';
+          msg.textContent = 'Copy the web URL below and paste it into the app.';
+          console.error('Exchange error', err);
+        });
+      } else {
+        title.textContent = 'No code found in the URL.';
+        msg.textContent = 'Copy the web URL below and paste it into the app\'s reset screen.';
       }
     })();
   </script>
