--- a/web/password-reset.html
+++ b/web/password-reset.html
@@ -33,8 +33,10 @@
   <script>
     (function(){
       var fullHref = window.location.href;
-      var params = new URLSearchParams(window.location.search);
-      var code = params.get('code') || params.get('access_token');
+  var params = new URLSearchParams(window.location.search);
+  var code = params.get('code') || params.get('access_token') || params.get('token');
+  // Supabase includes a 'type' param such as 'signup' or 'recovery'.
+  var linkType = params.get('type') || params.get('gotrue_type');
       var title = document.getElementById('title');
       var msg = document.getElementById('msg');
       var webInput = document.getElementById('webUrl');
@@ -70,8 +72,9 @@
         window.location.replace(url);
       });
 
-      // If there's a code, try to exchange it for an access_token and open the app.
-      if (code) {
+  // If this link is a password recovery, try to exchange it for an access_token and open the app.
+  // If the link is a confirmation/signup link (type !== 'recovery'), do not run the reset flow.
+  if (code && (!linkType || linkType === 'recovery')) {
         title.textContent = 'Exchanging code for token and opening app...';
         msg.textContent = 'If nothing happens, use the buttons below to copy the URL and paste it into the app.';
         // Call the serverless exchange function (Netlify) which performs the
@@ -96,6 +99,25 @@
           msg.textContent = 'Copy the web URL below and paste it into the app.';
           console.error('Exchange error', err);
         });
+      } else if (linkType && linkType !== 'recovery') {
+        // Link exists but is not a recovery link (for example: signup/confirmation).
+        title.textContent = 'This link confirms your email';
+        msg.textContent = 'This link is for confirming your email address (signup). Click Confirm to view confirmation details.';
+        // Add a Confirm button that opens a simple confirmation page.
+        var confirmBtn = document.createElement('button');
+        confirmBtn.textContent = 'Confirm';
+        confirmBtn.style.padding = '8px 12px';
+        confirmBtn.style.marginLeft = '8px';
+        confirmBtn.style.borderRadius = '6px';
+        confirmBtn.style.background = '#0a84ff';
+        confirmBtn.style.color = '#fff';
+        confirmBtn.addEventListener('click', function(){
+          // Navigate to a friendly confirmation page.
+          window.location.href = '/email-confirmed.html';
+        });
+        // insert the button after the debug block
+        var debug = document.getElementById('debug');
+        if (debug) debug.appendChild(confirmBtn);
       } else {
         title.textContent = 'No code found in the URL.';
         msg.textContent = 'Copy the web URL below and paste it into the app\'s reset screen.';
