--- a/web/index.html
+++ b/web/index.html
@@ -24,10 +24,11 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="ApexBody">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/ApexBody_logo.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="icons/ApexBody_logo.png"/>
+  <link rel="apple-touch-icon" href="icons/ApexBody_logo.png">
 
   <title>ApexBody</title>
   <link rel="manifest" href="manifest.json">
